Changed all of  to  for better color contrast. Except for the top blue stripe. Fixed some other color things like quick link icon colors in mobile view.

--- a/sass/fields.scss
+++ b/sass/fields.scss
@@ -30,7 +30,7 @@
   h3 {
     font-size:1.17em;
     line-height:1.17;
-    color:$wwuLtblue;
+    color:$wwuOceanBlue;
     margin-bottom:.33em;
     margin-top:0;
     text-align:left;
